TitledPane's title text's wrapping fix.

--- a/src/main/resources/ee/ut/similaritydetector/style/code_view_style.scss
+++ b/src/main/resources/ee/ut/similaritydetector/style/code_view_style.scss
@@ -28,16 +28,6 @@
   -fx-opacity: 0;
 }
 
-.titledPane-multiline > .title {
-  -fx-pref-height: 40; /* increase available area */
-  -fx-alignment: top-center;
-  -fx-padding: 4 4 4 30; /* increase left padding to align text */
-}
-
-.titledPane-multiline > .title > .arrow-button {
-  -fx-translate-x: -20; /* move back arrow, which is also subject to the padding */
-}
-
 #hideSideBarButton {
   -fx-background-radius: 1000;
   -fx-opacity: 0.85;
